change in description done

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="JECRC MUN is an ideal place to hone your public speaking, writing and analytical skills. All writing piece will involve your research and analytical abilities."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="munLogo.png" />
     <title>JECRC MUN</title>
   </head>
   <body>
